# API-CRUD-MVC-Fastapi-Postgresql

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: .env  main.py
src/configs/: database.py
src/enums/: RoleEnum.py
src/migrations/: migrations_NoSQL.py
src/models/: User.py
src/repositories/: IUser.py  Interface.py
src/schemas/request/: AuthenticationRequests.py
src/schemas/response/: BaseResponse.py
src/services/: AuthenticationService.py
src/views/: AuthenticationView.py
